appId: dev.sanastasov.bybon.debug
---
- launchApp
- assertVisible: "Bybon"
- assertVisible: "Full Body A"
- tapOn: "Start Workout"
- assertVisible: "Full body workout routine variant A"
- assertVisible: "Add Exercise"
- assertVisible: "Start Workout"
- tapOn: "Add Exercise"
- assertVisible: "Exercise Library"
- assertVisible: "Already added"
- assertVisible: "Barbell Bench Press"
- assertVisible: "Upper arms"
- assertVisible: "Dumbbell"
- tapOn:
    text: "Upper arms"
    index: 0
- tapOn:
    text: "Dumbbell"
    index: 0
- scrollUntilVisible:
    element: "Select Incline Dumbbell Curl"
    direction: DOWN
- tapOn: "Select Incline Dumbbell Curl"
- scrollUntilVisible:
    element: "Deselect Incline Dumbbell Curl"
    direction: UP
- tapOn: "Add exercise"
- assertVisible: "Full body workout routine variant A"
- assertVisible: "Add Exercise"
- assertVisible: "Start Workout"
- scrollUntilVisible:
    element: "3 x Incline Dumbbell Curl in 8 - 12"
    direction: DOWN
    centerElement: true
- assertVisible: "3 x Incline Dumbbell Curl in 8 - 12"
- tapOn: "More options for Incline Dumbbell Curl"
- tapOn: "Remove Exercise"
- assertNotVisible: "3 x Incline Dumbbell Curl in 8 - 12"
- tapOn: "Start Workout"
- assertVisible: "Exercise 1 / 6"
